[gd_scene load_steps=16 format=3 uid="uid://b72s3s0wsmila"]

[ext_resource type="Texture2D" uid="uid://cwugwjixr136k" path="res://ui/fondos/ui 2/fondo 1 0f 1.jpg" id="1_5itv4"]
[ext_resource type="Script" uid="uid://b8x5da8sc7p8m" path="res://Escenas/LevelsMenu/main.gd" id="1_kc1vv"]
[ext_resource type="Texture2D" uid="uid://diepjwp7h5a4u" path="res://ui/titulo 2.png" id="2_yiwdh"]
[ext_resource type="Texture2D" uid="uid://0fbjhpngvldq" path="res://ui/fondos/ui 2/vv.png" id="3_5itv4"]
[ext_resource type="Texture2D" uid="uid://d3chhjylbyy6f" path="res://ui/fondos/ui 2/vv2.png" id="4_m10tc"]
[ext_resource type="Texture2D" uid="uid://ddf65ifqmysqe" path="res://ui/fondos/ui 2/Frame 6.png" id="5_4h1v5"]
[ext_resource type="Texture2D" uid="uid://buepslxlwfl2b" path="res://ui/fondos/ui 2/Frame 5.png" id="6_inu62"]
[ext_resource type="Texture2D" uid="uid://bxmq7yd6ab36v" path="res://ui/fondos/ui 2/Frame 7.png" id="7_6c1ot"]
[ext_resource type="Texture2D" uid="uid://cjh0lvx43xnxm" path="res://ui/buttons/return.png" id="8_6c1ot"]
[ext_resource type="Texture2D" uid="uid://dvnfc7xilr7gb" path="res://ui/buttons/return 2.png" id="9_nfoe8"]
[ext_resource type="Texture2D" uid="uid://3ykiegk0uios" path="res://ui/buttons/menu.png" id="10_lcsw2"]
[ext_resource type="Texture2D" uid="uid://dqf51muej6g0a" path="res://ui/buttons/menu2.png" id="11_eoqpx"]

[sub_resource type="GDScript" id="GDScript_eoqpx"]
script/source = "extends TextureButton
func _on_pressed() -> void:
	get_tree().change_scene_to_file(\"res://Escenas//ChoseCaracter//Main.tscn\") # Replace with function body.
"

[sub_resource type="GDScript" id="GDScript_kc1vv"]
script/source = "extends TextureButton
# Precarga la escena de la ventana
var ventana_escena = preload(\"res://Escenas/LevelsMenu/PopupWindow.tscn\")
func _on_pressed() -> void:
	# Instancia la ventana
	var ventana = ventana_escena.instantiate()
	# Añádela como hijo del nodo actual
	add_child(ventana)
	# Si es un Popup/Window, muéstrala
	if ventana is Popup:
		ventana.popup_centered()
"

[sub_resource type="GDScript" id="GDScript_spwpi"]
script/source = "extends TextureButton


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_pressed() -> void:
	
	pass # Replace with function body.
"

[node name="Main" type="Node2D"]
script = ExtResource("1_kc1vv")

[node name="Fondo" type="TextureRect" parent="."]
offset_right = 1156.0
offset_bottom = 647.0
texture = ExtResource("1_5itv4")
expand_mode = 1

[node name="Titulo1" type="TextureRect" parent="."]
offset_left = 322.0
offset_top = -210.0
offset_right = 876.0
offset_bottom = 417.0
texture = ExtResource("2_yiwdh")
expand_mode = 1

[node name="nivel 1" type="MarginContainer" parent="."]
offset_left = 112.0
offset_top = 160.0
offset_right = 478.0
offset_bottom = 629.0

[node name="VBoxContainer" type="VBoxContainer" parent="nivel 1"]
layout_mode = 2

[node name="PlayLevel1Button" type="TextureButton" parent="nivel 1/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_5itv4")
texture_pressed = ExtResource("4_m10tc")
texture_hover = ExtResource("4_m10tc")
stretch_mode = 5
script = SubResource("GDScript_eoqpx")

[node name="nivel 2" type="TextureButton" parent="."]
offset_left = 671.0
offset_top = 158.0
offset_right = 1037.0
offset_bottom = 627.0
texture_normal = ExtResource("5_4h1v5")
texture_pressed = ExtResource("6_inu62")
texture_hover = ExtResource("6_inu62")
texture_disabled = ExtResource("7_6c1ot")

[node name="returnButton" type="TextureButton" parent="."]
offset_left = 19.0
offset_top = 11.0
offset_right = 123.0
offset_bottom = 118.0
texture_normal = ExtResource("8_6c1ot")
texture_pressed = ExtResource("9_nfoe8")
stretch_mode = 0
script = SubResource("GDScript_kc1vv")

[node name="menuButton" type="TextureButton" parent="."]
offset_left = 1026.0
offset_top = 11.0
offset_right = 1130.0
offset_bottom = 118.0
texture_normal = ExtResource("10_lcsw2")
texture_pressed = ExtResource("11_eoqpx")
script = SubResource("GDScript_spwpi")

[connection signal="pressed" from="nivel 1/VBoxContainer/PlayLevel1Button" to="." method="_on_play_level_1_button_pressed"]
[connection signal="pressed" from="returnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="menuButton" to="." method="_on_menu_button_pressed"]
